# shingling

./: .gitignore  Makefile  README.md  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
libindic/shingling/: __init__.py  core.py
libindic/shingling/templates/: libindic.shingling.html  shingling.html
libindic/shingling/tests/: test_shingling.py
shingling/: __init__.py  core.py
shingling/templates/: shingling.html
