[metadata]
name = libindic-shingling
summary = Generate word shinglings from text
description-file =
  README.md
author = Hrishikesh K B
author-email = hrishi.kb@gmail.com
home-page = http://silpa.org.in
classifier =
  #Environment :: Web Environment
  #Framework :: Flask
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved
  License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
  Programming Language :: Python
  Programming Language :: Python :: 3

[files]
namespace_packages = libindic
packages = libindic

[build-sphinx]
all_files = 1
source-dir = docs

[wheel]
universal = 1
